AC_INIT([xml-embedded], [1.0], [pva-outdoor@yandex.ru], [inpas-res], [https://github.com/pva-outdoor/xml-embedded.git])
AC_CONFIG_AUX_DIR([.])
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)
AC_CONFIG_MACRO_DIRS([m4])
AC_PROG_CXX
dnl AC_PROG_LEX
dnl AC_PROG_YACC
AC_PROG_LIBTOOL
dnl PKG_PROG_PKG_CONFIG

dnl AM_GNU_GETTEXT([external])

AC_OUTPUT(Makefile, [date > stamp-h] )
dnl AC_OUTPUT(Makefile po/Makefile.in, [date > stamp-h] )
